[gd_scene load_steps=40 format=2]

[ext_resource path="res://player/idle.png" type="Texture" id=1]
[ext_resource path="res://player/PlatformerController.gd" type="Script" id=2]
[ext_resource path="res://player/walk.png" type="Texture" id=3]
[ext_resource path="res://player/Player.gd" type="Script" id=4]
[ext_resource path="res://player/jump.png" type="Texture" id=5]
[ext_resource path="res://player/hurt.png" type="Texture" id=6]
[ext_resource path="res://player/turn.png" type="Texture" id=7]
[ext_resource path="res://player/crouch.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 10.1314

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.03147
height = 15.0

[sub_resource type="Animation" id=4]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.449, 6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "end_crouch"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.449076, 1.51671 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ScaleChildren/hurtbox/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.499996, -1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ScaleChildren/hurtbox/CollisionShape2D:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.1314 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "skid"
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleChildren/PlayerCore:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleChildren/PlayerCore:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleChildren/PlayerCore:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "crouch"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "end_crouch"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "freefall"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "skid"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
advance_condition = "walking"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
advance_condition = "not_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
advance_condition = "skidding"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
advance_condition = "not_skidding"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
advance_condition = "crouching"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
advance_condition = "not_crouching"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=29]
states/crouch/node = SubResource( 12 )
states/crouch/position = Vector2( 733.377, 47.42 )
states/end_crouch/node = SubResource( 13 )
states/end_crouch/position = Vector2( 733.377, -26.58 )
states/freefall/node = SubResource( 14 )
states/freefall/position = Vector2( 384, 52 )
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 556, 52 )
states/jump/node = SubResource( 16 )
states/jump/position = Vector2( 474, 148 )
states/skid/node = SubResource( 17 )
states/skid/position = Vector2( 801.377, 148 )
states/walk/node = SubResource( 18 )
states/walk/position = Vector2( 644, 148 )
transitions = [ "idle", "jump", SubResource( 19 ), "idle", "walk", SubResource( 20 ), "freefall", "idle", SubResource( 21 ), "walk", "idle", SubResource( 22 ), "jump", "freefall", SubResource( 23 ), "walk", "skid", SubResource( 24 ), "skid", "walk", SubResource( 25 ), "idle", "crouch", SubResource( 26 ), "crouch", "end_crouch", SubResource( 27 ), "end_crouch", "idle", SubResource( 28 ), "jump", "idle", SubResource( 31 ) ]
start_node = "idle"
graph_offset = Vector2( 265.697, -41.216 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=30]

[node name="Player" type="KinematicBody2D" groups=[
"all",
"player",
]]
rotation = 6.28319
collision_mask = 3
script = ExtResource( 2 )
TERMINAL_VELOCITY = 400

[node name="ScaleChildren" type="Node2D" parent="."]

[node name="PlayerCore" type="Sprite" parent="ScaleChildren"]
texture = ExtResource( 1 )
hframes = 2
script = ExtResource( 4 )

[node name="hurtbox" type="Area2D" parent="ScaleChildren" groups=[
"hurtbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaleChildren/hurtbox"]
position = Vector2( 0.499996, -1 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="ScaleChildren" groups=[
"hitbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaleChildren/hitbox"]
position = Vector2( 0.491637, 13.2454 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.449076, 1.51671 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 4 )
anims/end_crouch = SubResource( 5 )
anims/freefall = SubResource( 6 )
anims/hurt = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/skid = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 29 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 30 )
parameters/conditions/crouching = false
parameters/conditions/not_crouching = false
parameters/conditions/not_skidding = false
parameters/conditions/not_walking = false
parameters/conditions/skidding = false
parameters/conditions/walking = false
[connection signal="off_cliff" from="." to="ScaleChildren/PlayerCore" method="take_damage" binds= [ 1 ]]
[connection signal="area_entered" from="ScaleChildren/hurtbox" to="ScaleChildren/PlayerCore" method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="ScaleChildren/hurtbox" to="ScaleChildren/PlayerCore" method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="ScaleChildren/hitbox" to="ScaleChildren/PlayerCore" method="_on_hitbox_area_entered"]
